--- a/gradle/dependency-versions.gradle
+++ b/gradle/dependency-versions.gradle
@@ -1,12 +1,15 @@
 
 ext {
   commonsCodecVersion = '1.9'
+  commonsPoolVersion = '1.6'
   guavaVersion = '16.0.1'
   jodaTimeVersion = '2.3'
   junitVersion = '4.11'
   logbackVersion = '1.1.1'
   slf4jVersion = '1.7.6'
-  springFrameworkVersion = '4.0.1.RELEASE'
+  springFrameworkVersion = '4.0.2.RELEASE'
   springSecurityVersion = '3.2.0.RELEASE'
-  timexVersion = '1.1.0'
+  tkmtwoUtilityVersion = '1.0.1'
+  tkmtwoTimexVersion = '1.2.4'
+  xercesVersion = '2.11.0'
 }
