--- a/gradle/dependency-versions.gradle
+++ b/gradle/dependency-versions.gradle
@@ -3,6 +3,7 @@ ext {
   commonsCodecVersion = '1.9'
   commonsPoolVersion = '1.6'
   guavaVersion = '16.0.1'
+  jacksonVersion = '2.3.2'
   jodaTimeVersion = '2.3'
   junitVersion = '4.11'
   logbackVersion = '1.1.1'
@@ -15,4 +16,5 @@ ext {
   tkmtwoUtilityVersion = '1.0.1'
   tkmtwoTimexVersion = '1.3.1'
   xercesVersion = '2.11.0'
+  xstreamVersion = '1.4.7'
 }
